--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -2,15 +2,16 @@
   .side-header
     .side-header__box
       .side-header__box__user-name
-        ユーザー
+        = current_user.name
       .side-header__box__menu
         .side-header__box__menu__new-group
           = link_to "#" do
             .fa.fa-edit
               
         .side-header__box__menu__edit-user
-          = link_to "#" do
-            .fa.fa-cog
+          = link_to edit_user_path(current_user) do
+            = icon('fas', 'cog', class: 'icon')
+            
 
   .groups
     = link_to "#", class:"group" do
