gruop create edit

--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -5,8 +5,8 @@
         = current_user.name
       .side-header__box__menu
         .side-header__box__menu__new-group
-          = link_to "#" do
-            .fa.fa-edit
+          = link_to new_group_path do
+            = icon('fas', 'edit', class: 'icon')
               
         .side-header__box__menu__edit-user
           = link_to edit_user_path(current_user) do
@@ -14,8 +14,9 @@
             
 
   .groups
-    = link_to "#", class:"group" do
-      .group__group-name
-        グループ名
-      .group__latest-message
-        メッセージ
+    - current_user.groups.each do |group|
+      = link_to "#", class:"group" do
+        .group__group-name
+          = group.name
+        .group__latest-message
+          メッセージはまだありません。
