--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -2,36 +2,52 @@
   .main-header
     .main-header__left-box
       .main-header__left-box__current-group
-        test
+        = @group.name
         .main-header__left-box__member-list
-          Member : masa
+          - @group.users.each do |user|
+            = user.name
           .main-header__left-box__member-list__member
 
     
     .main-header__edit-btn
-      = link_to "#" do
+      = link_to edit_group_path(@group) do
         Edit
       
 
   .messages
-    .message
-      .message__upper-info
-        .message__upper-info__talker
-          masa
-        .message__upper-info__date
-          2019/11/20(Wed) 17:43:01
-      .message__text
-        おはよう!
+    = render @messages
+  -#   .message
+  -#     .message__upper-info
+  -#       .message__upper-info__talker
+  -#         = message.user.name
+  -#       .message__upper-info__date
+  -#         = message.created_at.strftime("%Y/%m/%d %H:%M")
+  -#     .message__text
+  -#       - if message.content.present?
+  -#         %p.message__text__content
+  -#           = message.content
+  -#       = image_tag message.image.url, class: 'lower-message__image' if message.image.present?
   
 
 
 
+  -# .form
+  -#   .new_message
+  -#     .input-box
+  -#       = form_for [@group, @message] do |f|
+  -#       .input-box__text type a message
+  -#       %label{class: "input-box__image"}
+  -#         %i.fa.fa-image
+  -#         %input{type: "file", class: "hide"}
+  -#     .submit-btn
+  -#       Send
+
   .form
-    .new_message
-      .input-box
-        .input-box__text type a message
-        %label{class: "input-box__image"}
-          %i.fa.fa-image
-          %input{type: "file", class: "hide"}
-      .submit-btn
-        Send
+    = form_for [@group, @message] do |f|
+      .new_message__box
+        = f.text_field :content, class: 'new_message__box__left', placeholder: 'type a message'
+        = f.label :image, class: 'new_message__box__image' do
+          = icon('fas', 'image', class: 'new_message__fa.fa-image')
+          = f.file_field :image, class: 'new_message__hide'
+      = f.submit 'Send', class: 'new_message__submit-btn'
+    
