--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -15,8 +15,8 @@
 
   .groups
     - current_user.groups.each do |group|
-      = link_to "#", class:"group" do
+      = link_to group_messages_path(group) do
         .group__group-name
           = group.name
         .group__latest-message
-          メッセージはまだありません。
+          = group.show_last_message
